--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
             </div>
             <div id="scroll" class="hhcard">
                 
-                    <div class="slide"><img src="img/epoch.jpg"/></div>
-                    <div class="slide"><img src="img/lucca.jpg"/></div>
-                    <div class="slide"><img src="img/crono.jpg"/></div>
-                    <div class="slide"><img src="img/nadia.jpg"/></div>
-                    <div class="slide"><img src="img/frog.jpg"/></div>
-                    <div class="slide"><img src="img/ayla.jpg"/></div>
-                    <div class="slide"><img src="img/magus.jpg"/></div>
-                    <div class="slide"><img src="img/robo.jpg"/></div>
-                    <div class="slide"><img src="img/crono.jpg"/></div>
-                    <div class="slide"><img src="img/nadia.jpg"/></div>
+                    <div class="slide"><img src="img/epoch.JPG"/></div>
+                    <div class="slide"><img src="img/lucca.JPG"/></div>
+                    <div class="slide"><img src="img/crono.JPG"/></div>
+                    <div class="slide"><img src="img/nadia.JPG"/></div>
+                    <div class="slide"><img src="img/frog.JPG"/></div>
+                    <div class="slide"><img src="img/ayla.JPG"/></div>
+                    <div class="slide"><img src="img/magus.JPG"/></div>
+                    <div class="slide"><img src="img/robo.JPG"/></div>
+                    <div class="slide"><img src="img/crono.JPG"/></div>
+                    <div class="slide"><img src="img/nadia.JPG"/></div>
                 
             </div>
             <div id="deets"><div id="nu">Name</div><p id="deta">info</p></div>
