--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="card">
             <div id="title">
                 <h1>Choose Your Hero</h1>
-                <h2>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</h2>
+                <h2>Art requires more than an apprentice conjurer or an aspiring sorceress, learning their craft. Team up with any of our veteran Artists and let them work their magic.</h2>
             </div>
             <div id="scroll" class="hhcard">
                 
