--- a/products.html
+++ b/products.html
@@ -51,7 +51,7 @@
             </div>
         
             <div class="listitem">
-                <a href=".html"><img src="img/product/lapel_pins.png"/></a>
+                <a href="pins.html"><img src="img/product/lapel_pins.png"/></a>
                 <span>Pins</span>
                 <p>Our hard enamel lapel pins, also known as Cloisonné pins</p>
             </div>
