--- a/events.html
+++ b/events.html
@@ -146,7 +146,7 @@
         <br>
         <span>Located in beautiful Florida</span>
         <br>
-        <center><p>Map</p></center>
+        <iframe src="https://www.google.com/maps/place/Orlando,+FL/@28.4810738,-81.5074724,11z/data=!3m1!4b1!4m6!3m5!1s0x88e773d8fecdbc77:0xac3b2063ca5bf9e!8m2!3d28.5383832!4d-81.3789269!16zL20vMHBseTA?entry=ttu"></iframe>
         <br><br><br><br>
     </div>
     <div class="card bgc"><br></div>
