--- a/events.html
+++ b/events.html
@@ -146,7 +146,7 @@
         <br>
         <span>Located in beautiful Florida</span>
         <br>
-        <iframe src="https://www.google.com/maps/place/Orlando,+FL/@28.4810738,-81.5074724,11z/data=!3m1!4b1!4m6!3m5!1s0x88e773d8fecdbc77:0xac3b2063ca5bf9e!8m2!3d28.5383832!4d-81.3789269!16zL20vMHBseTA?entry=ttu"></iframe>
+       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d224444.7544025153!2d-81.50747238350516!3d28.48107384821315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e773d8fecdbc77%3A0xac3b2063ca5bf9e!2sOrlando%2C%20FL!5e0!3m2!1sen!2sus!4v1714087176341!5m2!1sen!2sus" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <br><br><br><br>
     </div>
     <div class="card bgc"><br></div>
