--- a/index.html
+++ b/index.html
@@ -120,23 +120,23 @@
     <div class="fcard">
         
             <h1>Reach Out</h1>
-            <a href="#">RAH Studios, Orlando FL</a>
-            <a href="#">P: +1 407.765.4388</a>
-            <a href="#">Heroes@RAHStudios.com</a>
+            <a href="#"> RAH Studios, Orlando, FL</a>
+            <a href="#"> +1 407.765.4388</a>
+            <a href="#"> art@rentaherostudios.com</a>
         
     </div>
     <div class="fcard">
-        <h1>magickom</h1>
-        <a href="#">The World is full of magical things patiently waiting for your senses to grow stronger</a>
+        <h1>Omnia de Arte</h1>
+        <a href="#">It's all about the art.</a>
     </div>
     <div class="fcard">
         <h1>Follow Our Social</h1>
-        <p>Loctis utsend herdsecht murer moleitic vundergund black magic interceptual nanomatter vitao</p>
+        <p>Get all the latest and greatest news and updates from RAH Studios</p>
         <ul class="fl">
-            <li><a href="https://facebook.com">FB</a></li>
-            <li><a href="https://instagram.com">IG</a></li>
-            <li><a href="https://twitter.com">XO</a></li>
-            <li><a href="https://youtube.com">YT</a></li>
+            <li><a href="https://www.facebook.com/">FB</a></li>
+            <li><a href="https://www.instagram.com/">IG</a></li>
+            <li><a href="https://www.twitter.com/">XO</a></li>
+            <li><a href="https://www.youtube.com/">YT</a></li>
         </ul>
     </div>
     </div>
