--- a/pins.html
+++ b/pins.html
@@ -15,7 +15,7 @@
         
         <div id="" class="card">
             <div id="hl" class="hwcard right">
-                <img src="img/RAH-Logo.png"/>
+                <img src="img/rah-logo.png"/>
             </div>
             <div id="bm" class="hwcard left hover" onclick="navigate();">
                <a href="index.html" ><img src="img/bm.png"/></a>
