--- a/gallery.html
+++ b/gallery.html
@@ -55,7 +55,7 @@
         <div class="gcard"><img src="img/mimic.JPG"/></div>
         <div class="gcard"><img src="img/rah-bg1.JPG"/></div>
         <div class="gcard"><img src="img/Gates-of-Hell.jpg"/></div>
-        <div class="gcard"><img src="img/bs.JPG"/></div>
+        <div class="gcard"><img src="img/bs.jpg"/></div>
         <div class="gcard"><img src="img/giftfire.JPG"/></div>
         
     </div>
