--- a/event-page-1.html
+++ b/event-page-1.html
@@ -40,6 +40,7 @@
         
        <br>
         <span>= Creator's Convention =</span>
+        <div class="hwcard"><div class="hwcard"><img src="img/lineart_1.png"/></div></div>
         <br>
         <center><p>July 3, 2023<br>Orlando, Florida</p></center>
         <br>
