--- a/gallery.html
+++ b/gallery.html
@@ -37,6 +37,7 @@
     <div class="card bgc">
         <br>
         <span>= Gallery =</span>
+        <div class="hwcard"><div class="hwcard"><img src="img/lineart_1.png"/></div></div>
         <br>
         <center><p>A sample collection of the artist work</p></center>
     </div>
