--- a/pins.html
+++ b/pins.html
@@ -34,13 +34,15 @@
         <!--<li><a href="#" >Contact</a></li>-->
     </ul>
     </div>
-    <div class="card bgc"><br><span>= Lapel Pins =</span><br></div>
+    <div class="card bgc"><br><span>= Lapel Pins =</span>
+        <div class="hwcard"><div class="hwcard"><img src="img/lineart_1.png"/></div></div><br></div>
     <div id="products"  class="lc">
         
         <div class="list">
             <div class="listitem">
                 <a href="product-pin-DieStruck.html"><img src="img/product/RAH-Studios.png"/></a>
                 <span>Die Struck</span>
+                
                 <!--<p>When considering custom designed lapel pins, you can’t go wrong with the timeless elegance of a die struck lapel pin. These simple, all-metal lapel pins provide a clean, understated, and elegant looking high-quality accessory to be worn by men and women as a mark of distinction and pride.</p>-->
             </div>
             <div class="listitem">
