--- a/events.html
+++ b/events.html
@@ -40,6 +40,7 @@
         
        <br>
         <span>- Recent Events -</span>
+        <div class="hwcard"><div class="hwcard"><img src="img/lineart_1.png"/></div></div>
         <br>
         <center><p>Come see us at our next event</p></center>
         <br>
