--- a/products.html
+++ b/products.html
@@ -37,6 +37,7 @@
     <div class="card bgc">
         <br>
         <span>- Our Products -</span>
+        <div class="hwcard"><div class="hwcard"><img src="img/lineart_1.png"/></div></div>
         <br>
     </div>
     <div id="products"  class="lc">
