--- a/event-page-1.html
+++ b/event-page-1.html
@@ -45,7 +45,7 @@
         <center><p>July 3, 2023<br>Orlando, Florida</p></center>
         <br>
         <div class="scrollcontain">
-        <div class="scroller">
+        <div class="scroller2">
         <div class="cardc">
             <img src="img/merch.JPG" />
             
