--- a/events.html
+++ b/events.html
@@ -45,7 +45,7 @@
         <center><p>Come see us at our next event</p></center>
         <br>
         <div class="scrollcontain">
-        <div class="scroller">
+        <div class="scroller2">
         <div class="cardc">
             <a href="event-page-1.html"><img src="img/merch.JPG" /></a>
             <span>Creator's Convention</span>
