--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li><a href="about.html" >About</a></li>
         <li><a href="events.html" >Events</a></li>
         <li><a href="products.html" >Products</a></li>
-        <!--<li><a href="#" >Contact</a></li>-->
+        <li><a href="samples.html" >Samples</a></li>
     </ul>
     
     <!--<canvas id="jumbotron"></canvas>-->
