--- a/pins.html
+++ b/pins.html
@@ -46,12 +46,12 @@
                 <!--<p>When considering custom designed lapel pins, you can’t go wrong with the timeless elegance of a die struck lapel pin. These simple, all-metal lapel pins provide a clean, understated, and elegant looking high-quality accessory to be worn by men and women as a mark of distinction and pride.</p>-->
             </div>
             <div class="listitem">
-                <a href="product-pin-SoftEnamel.html"><img src="img/product/pins/pinsamples/Denali-Plane-Pin.png"/></a>
+                <a href="uc.html"><img src="img/product/pins/pinsamples/Denali-Plane-Pin.png"/></a>
                 <span>Soft Enamel</span>
                 <!--<p>Oftentimes you want a fun pin tRAH-Studios doesn’t need to make a grandiose statement. For these kinds of projects, we offer more inexpensive, economy enamel lapel pins.</p>-->
             </div>
             <div class="listitem">
-                <a href="product-pin-Cloisonne.html"><img src="img/product/pins/pinsamples/HardEnamelwithprint.png"/></a>
+                <a href="uc.html"><img src="img/product/pins/pinsamples/HardEnamelwithprint.png"/></a>
                 <span>Cloisonne</span>
                 <!--<p>Our hard enamel lapel pins, also known as Cloisonné pins or epola pins, are some of our highest quality and most popular pins. Made with modernized techniques based on ancient Chinese artistry, hard enamel lapel pins have an impressive appearance and a durable construction. These long lasting lapel pins are perfect for wearing over and over again and are sure to catch the eye of everyone who sees them.</p>-->
             </div>
@@ -60,17 +60,17 @@
         
         <div class="list">
             <div class="listitem">
-                <a href="product-pin-PreciousMetal.html"><img src="img/product/pins/pinsamples/Golden-Boot.png"/></a>
+                <a href="uc.html"><img src="img/product/pins/pinsamples/Golden-Boot.png"/></a>
                 <span>Precious Metal</span>
                <!-- <p>For projects with a higher budget or for a truly special occasion or event that require an elegant, fine jewelry quality lapel pin, choose from one of our precious metal options. We have options available in sterling silver, 10 karat gold filled, 10 karat solid gold or 14 karat solid gold.</p>-->
             </div>
             <div class="listitem">
-                <a href="product-pin-Printed.html"><img src="img/product/pins/pinsamples/Denali-Star-Pin.png"/></a>
+                <a href="uc.html"><img src="img/product/pins/pinsamples/Denali-Star-Pin.png"/></a>
                 <span>Printed</span>
                 <!--<p>For custom designs that have a lot of details, such as recreating a painting or photograph, we recommend ordering printed lapel pins. Printed pins allow for a full color pin without the need for raised metal areas to separate different colors and areas.</p>-->
             </div>
             <div class="listitem">
-                <a href="product-pin-Cast.html"><img src="img/product/pins/pinsamples/3dDiecastpin.png"/></a>
+                <a href="uc.html"><img src="img/product/pins/pinsamples/3dDiecastpin.png"/></a>
                 <span>Cast</span>
                 <!--<p>The ancient art of casting metal from a mold gets a modern twist with our custom cast process.</p>-->
             </div>
@@ -79,19 +79,19 @@
         
         <div class="list">
             <div class="listitem">
-                <a href="product-pin-MadeintheUSA.html"><img src="img/product/pins/pinsets/NYC-Pins.png"/></a>
+                <a href="uc.html"><img src="img/product/pins/pinsets/NYC-Pins.png"/></a>
                 <span>Made in the USA</span>
                <!-- <p>We offers a wide range of Made in the USA custom lapel pins to suit any lead time or budget.</p>-->
             </div>
             <div class="listitem">
-                <a href="product-pin-OffsetPrint.html"><img src="img/product/pins/pinsamples/Artist-Unite.png"/></a>
+                <a href="uc.html"><img src="img/product/pins/pinsamples/Artist-Unite.png"/></a>
                 <span>Offset Print</span>
                 <!--<p>Offset Printed lapel pins enable your design to be printed on the lapel pin surface with one or more color gradients, or fades. This process also insures an exact replica of the design or artwork you present to us for production.
 
                 The Offset Printed process is perfect for designs that use actual photographs as a backdrop. Unlike the other lapel pin manufacturing processes we offer, Offset Printed pins do not require metal separating each color. This means your design potential is endless and complicated corporate logos are easily reproduced.</p>-->
             </div>
             <div class="listitem">
-                <a href="product-pin-PVC.html"><img src="img/product/pins/pinsets/Cat-10-Pins.png"/></a>
+                <a href="uc.html"><img src="img/product/pins/pinsets/Cat-10-Pins.png"/></a>
                 <span>PVC</span>
                 <!--<p>For a fun, three-dimensional rendition of your logo or design, you may want to consider custom designed PVC lapel pins. PVC lapel pins are made with a versatile process that can create flat, 2D, 3D or even a full relief of your chosen design or logo. In addition to standard PMS colors, we offer PVC pins that are transparent, neon, sparkling, and even glow in the dark!</p>-->
             </div>
