--- a/products.html
+++ b/products.html
@@ -44,7 +44,7 @@
         
         <div class="list">
             <div class="listitem">
-                <a href="coins.html"><img src="img/product/lapel_pins.png"/></a>
+                <a href="uc.html"><img src="img/product/lapel_pins.png"/></a>
                 <span>Coins</span>
                 <!--<p>Description lorem ipsum dolor sit amet</p>-->
             </div>
@@ -54,7 +54,7 @@
                 <!--<p>Our hard enamel lapel pins, also known as Cloisonné pins</p>-->
             </div>
             <div class="listitem">
-                <a href="patches.html"><img src="img/product/patches/UtqiagvikAKPatch2.png"/></a>
+                <a href="uc.html"><img src="img/product/patches/UtqiagvikAKPatch2.png"/></a>
                 <span>Patches</span>
                 <!--<p>Specially designed embroidered patches</p>-->
             </div>
@@ -63,17 +63,17 @@
         
         <div class="list">
             <div class="listitem">
-                <a href="keychains.html"><img src="img/product/pin-and-keychain-with-tags.png"/></a>
+                <a href="uc.html"><img src="img/product/pin-and-keychain-with-tags.png"/></a>
                 <span>Keychains</span>
                 <!--<p>One thing that almost every man, woman, and even child has a set of keys.</p>-->
             </div>
              <div class="listitem">
-                <a href="cars.html"><img src="img/product/cards/Denali-Star-Card.png"/></a>
+                <a href="uc.html"><img src="img/product/cards/Denali-Star-Card.png"/></a>
                 <span>Cards</span>
                 <!--<p>Lanyards are fun and versatile accessories.</p>-->
             </div>
             <div class="listitem">
-                <a href=".html"><img src="img/product/cup.png"/></a>
+                <a href="uc.html"><img src="img/product/cup.png"/></a>
                 <span>Cups</span>
                 <!--<p>Description lorem ipsum dolor sit amet</p>-->
             </div>
@@ -87,12 +87,12 @@
                 <!--<p>Description lorem ipsum dolor sit amet</p>-->
             </div>
             <div class="listitem">
-                <a href=".html"><img src="img/product/Shirt-and-Coin-Combo.png"/></a>
+                <a href="uc.html"><img src="img/product/Shirt-and-Coin-Combo.png"/></a>
                 <span>Shirts</span>
                 <!--<p>Description lorem ipsum dolor sit amet</p>-->
             </div>
             <div class="listitem">
-                <a href=".html"><img src="img/product/Plush-doll.png"/></a>
+                <a href="uc.html"><img src="img/product/Plush-doll.png"/></a>
                 <span>Plushies</span>
                 <!--<p>Description lorem ipsum dolor sit amet</p>-->
             </div>
