--- a/event-page-1.html
+++ b/event-page-1.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         
-        <div id="sbg" class="bg"><img src="img/rah-bg1.JPG"/></div>
+       <div id="sbg" class="bg"><img src="img/RAH-Web-Background.jpg"/></div>
         
     </div>
     <div  class="card">
