--- a/pins.html
+++ b/pins.html
@@ -142,7 +142,7 @@
                 </ul>
             </div>
         </div>
-        <div class="bg"><img src="img/foot-logo.JPG"/></div>
+        <!--  <div class="bg"><img src="img/foot-logo.JPG"/></div>-->
         
     </div>
      
