--- a/about.html
+++ b/about.html
@@ -367,7 +367,7 @@
                 </ul>
             </div>
         </div>
-        <div class="bg"><img src="img/foot-logo.JPG"/></div>
+       <!--  <div class="bg"><img src="img/foot-logo.JPG"/></div>-->
         
     </div>
     <!--
