--- a/event-page-1.html
+++ b/event-page-1.html
@@ -137,7 +137,7 @@
                 </ul>
             </div>
         </div>
-        <div class="bg"><img src="img/foot-logo.JPG"/></div>
+        <!--  <div class="bg"><img src="img/foot-logo.JPG"/></div>-->
         
     </div>
     <!--
