--- a/gallery.html
+++ b/gallery.html
@@ -106,7 +106,7 @@
                 </ul>
             </div>
         </div>
-        <div class="bg"><img src="img/foot-logo.JPG"/></div>
+        <!--  <div class="bg"><img src="img/foot-logo.JPG"/></div>-->
         
     </div>
      
