--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </ul>
             </div>
         </div>
-        <div class="bg"><img src="img/foot-logo.JPG"/></div>
+        <!--  <div class="bg"><img src="img/foot-logo.JPG"/></div>-->
         
     </div>
     <div id="cs">
