--- a/products.html
+++ b/products.html
@@ -143,7 +143,7 @@
                 </ul>
             </div>
         </div>
-        <div class="bg"><img src="img/foot-logo.JPG"/></div>
+      <!--  <div class="bg"><img src="img/foot-logo.JPG"/></div>-->
         
     </div>
      
