--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
         <div id="" class="bg"><img src="img/thisone.jpg"/></div>
     </div>-->
-
+    <div class="card"><br><br><br></div>
     <div id="crew" class="card">
         
         <div class="card">
