--- a/product-pin-DieStruck.html
+++ b/product-pin-DieStruck.html
@@ -73,10 +73,10 @@
     </div>  </div>      
             <div class="card">
                 <p>When considering custom designed lapel pins, you can’t go wrong with the timeless elegance of a die struck lapel pin. These simple, all-metal lapel pins provide a clean, understated, and elegant looking high-quality accessory to be worn by men and women as a mark of distinction and pride.</p>
-           <div class="bc">
+          <!-- <div class="bc">
             <button>Call</button>
             <button>Order</button>
-            </div>
+            </div>-->
         </div>
         
         <!--
@@ -416,7 +416,7 @@
         </div>
 
         -->
-        
+        <!--
         <div class="card bgc">          <br><br><br>        </div>
         <div class="card">
             <span>Die Struck Lapel Pin</span>
@@ -427,7 +427,8 @@
             <button>Call</button>
             <button>Order</button>
             </div>
-        </div> 
+        </div>
+        -->
         <!--
         <div class="card">
                 <a href="#.html"><img src="img/product/merch.png"/></a>
