--- a/metalworks.html
+++ b/metalworks.html
@@ -123,18 +123,22 @@
             </div>-->
             <div id="scroll2" class="card">
                 
-                    <div class="slide2"><img src="img/product/blackmagic-plating-coins/Black-Magic-Plating-Antique-Brass.jpg"/></div>
-                    <div class="slide2"><img src="img/product/blackmagic-plating-coins/Black-Magic-Plating-Antique-Bronze.jpg"/></div>
-                    <div class="slide2"><img src="img/product/blackmagic-plating-coins/Black-Magic-Plating-Antique-Copper.jpg"/></div>
-                    <div class="slide2"><img src="img/product/blackmagic-plating-coins/Black-Magic-Plating-Antique-Gold.jpg"/></div>
-                    <div class="slide2"><img src="img/product/blackmagic-plating-coins/Black-Magic-Plating-Antique-Nickel.jpg"/></div>
-                    <div class="slide2"><img src="img/product/blackmagic-plating-coins/Black-Magic-Plating-Black-Nickel.jpg"/></div>
-                    <div class="slide2"><img src="img/product/blackmagic-plating-coins/Black-Magic-Plating-Brass.jpg"/></div>
-                    <div class="slide2"><img src="img/product/blackmagic-plating-coins/Black-Magic-Plating-Copper.jpg"/></div>
-                    <div class="slide2"><img src="img/product/blackmagic-plating-coins/Black-Magic-Plating-Gold.jpg"/></div>
-                <div class="slide2"><img src="img/product/blackmagic-plating-coins/Black-Magic-Plating-Matte-Nickel.jpg"/></div>
-                <div class="slide2"><img src="img/product/blackmagic-plating-coins/Black-Magic-Plating-Nickel.jpg"/></div>
-                    <div class="slide2"><img src="img/product/blackmagic-plating-coins/Black-Magic-Plating-Silver.jpg"/></div>
+                    <div class="slide2"><img src="img/product/bmpcr/AntIBrass.png"/></div>
+                    <div class="slide2"><img src="img/product/bmpcr/AntiBronze.png"/></div>
+                    <div class="slide2"><img src="img/product/bmpcr/AntiCopper.png"/></div>
+                    <div class="slide2"><img src="img/product/bmpcr/AntiNickel.png"/></div>
+                    <div class="slide2"><img src="img/product/bmpcr/Black-Nickel-1.png"/></div>
+                    <div class="slide2"><img src="img/product/bmpcr/Black-Nickel.png"/></div>
+                    <div class="slide2"><img src="img/product/bmpcr/Brass.png"/></div>
+                    <div class="slide2"><img src="img/product/bmpcr/Copper.png"/></div>
+                    <div class="slide2"><img src="img/product/bmpcr/Gold.png"/></div>
+                <div class="slide2"><img src="img/product/bmpcr/Matte-Gold.png"/></div>
+                <div class="slide2"><img src="img/product/bmpcr/Matte-Nickel.png"/></div>
+                    <div class="slide2"><img src="img/product/bmpcr/Matte-SIlver-1.png"/></div>
+                <div class="slide2"><img src="img/product/bmpcr/Matte-SIlver-2.png"/></div>
+                <div class="slide2"><img src="img/product/bmpcr/Matte-SIlver.png"/></div>
+                <div class="slide2"><img src="img/product/bmpcr/Nickel.png"/></div>
+                <div class="slide2"><img src="img/product/bmpcr/Silver.png"/></div>
                 
             </div>
             <!--<div id="deets"><div id="nu">Name</div><p id="deta">info</p></div>-->
