--- a/artist-name.html
+++ b/artist-name.html
@@ -56,6 +56,7 @@
             <div class="hwcard left">
             <div class="card">
                 <img src="img/crew/Damian-one_white.png"  />
+                <img src="img/svg/DamianLogo-offwhite.svg"  />
             <br>
             </div>
             <div class="card">
