--- a/artist-name.html
+++ b/artist-name.html
@@ -26,12 +26,8 @@
         
     </div>
     -->
-    <div  class="card bgcb">
-        <div  class="hwcard">
-            <img src="img/svg/RAHstudios_Logo_2tone_white.svg"/>
-        </div>
-    </div>
-    <div  class="card">
+    <div id="minihead" class="card bgcb">
+        <div  class="fcard ">
     <ul id="navbar3">
         <!--<li><a href="index.html" >Home</a></li>-->
         <li><a href="about.html" >About</a></li>
@@ -40,7 +36,13 @@
         <!--<li><a href="#" >Contact</a></li>-->
     </ul>
     </div>
-    
+        <div  class="fcard "><div  class="hwcard"><div  class="hwcard">
+            <img src="img/svg/RAHstudios_Logo_2tone_white.svg"/>
+        </div></div></div>
+    </div>
+    <div class="card bgcb">
+    <br>
+    </div>
     <div class="card ">
         <br>
         <span>= Artist Gallery =</span>
