--- a/artist-name.html
+++ b/artist-name.html
@@ -84,7 +84,7 @@
                     <li>Adobe Photoshop</li>
                     <li>Vector illustration</li>
                     </ul>
-                <div id="wid2" class="">
+                <div id="" class="">
                 <h1>About me</h1>
                    <p> Unique, Experienced Graphic Designer &amp; Illustrator. Over a period of 13 years, I was fortunate to collaborate with many Brands (ESET, Wornstar, Sav Tac, Spiral Direct...) Bands (Sabaton, Slayer, The Ramones...). and NFT's (Angry Pitbulls, Alien Rappers, Sleeping Sniper...) 
                     </p>
