--- a/artist-name.html
+++ b/artist-name.html
@@ -29,11 +29,11 @@
     <div id="minihead" class="card ">
         <div  class="fcard ">
     <ul id="navbar3">
-        <!--<li><a href="index.html" >Home</a></li>-->
-        <li><a href="about.html" >About</a></li>
-        <li><a href="products.html" >Products</a></li>
-        <li><a href="events.html" >Events</a></li>
-        <!--<li><a href="#" >Contact</a></li>-->
+        <li><a href="index.html" >Home</a></li>
+      <!--  <li><a href="about.html" >About</a></li> -->
+        <li><a href="samples.html" >Samples</a></li>
+       <!-- <li><a href="events.html" >Events</a></li> -->
+        <li><a href="metalworks.html" >Crafts </a></li>
     </ul>
     </div>
         <div  class="fcard "><div  class="hwcard"><div  class="hwcard">
