--- a/artist-name.html
+++ b/artist-name.html
@@ -66,7 +66,7 @@
             <div id="ceevee" class="hwcard left">
             <div id="namelogo" class="">
                 
-                <img src="img/svg/DamianLogo-offwhite.svg"  />
+                <img src="img/svg/DamianLogo.svg"  />
             <br>
             </div>
             <div class="">
