--- a/artist-name.html
+++ b/artist-name.html
@@ -28,6 +28,7 @@
     -->
     <div id="minihead" class="card ">
         <div  class="fcard ">
+            <img  id="menubar" src="img/menubar.png" onclick="toggleMenu();"/>
     <ul id="navbar3">
         <li><a href="index.html" >Home</a></li>
       <!--  <li><a href="about.html" >About</a></li> -->
@@ -36,7 +37,7 @@
         <li><a href="metalworks.html" >Crafts </a></li>
     </ul>
     </div>
-        <div  class="fcard "><div  class="hwcard"><div  class="hwcard">
+        <div id="headlogo" class="hwcard "><div  class="hwcard"><div  class="hwcard">
             <img src="img/svg/RAHstudios_Logo_2tone_white2.svg"/>
             <img src="img/svg/WhiteRoseDivider2.svg"/>
         </div></div></div>
