--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
             </div>
             <div id="scroll" class="hhcard">
                 
-                    <div class="slide"><img src="img/crew/Al-Carter.png"/></div>
-                    <div class="slide"><img src="img/crew/Damien.png"/></div>
-                    <div class="slide"><img src="img/crew/Isuru.png"/></div>
-                    <div class="slide"><img src="img/crew/Nati.png"/></div>
-                    <div class="slide"><img src="img/crew/Yorden.png"/></div>
-                    <!--<div class="slide"><img src="img/ayla.JPG"/></div>
-                    <div class="slide"><img src="img/magus.JPG"/></div>
-                    <div class="slide"><img src="img/robo.JPG"/></div>
+                    <div class="slide"><img src="img/crew/heroSelect/AlCarterCharacterSelect.png"/></div>
+                    <div class="slide"><img src="img/crew/heroSelect/DamianCharacterSelect.png"/></div>
+                    <div class="slide"><img src="img/crew/heroSelect/IsuruCharacterSelect.png"/></div>
+                    <div class="slide"><img src="img/crew/heroSelect/NatiavelliCharacterSelect.png"/></div>
+                    <div class="slide"><img src="img/crew/heroSelect/VictorCharacterSelect.png"/></div>
+                    <div class="slide"><img src="img/crew/heroSelect/WendyCharacterSelect.png"/></div>
+                    <div class="slide"><img src="img/crew/heroSelect/YordenCharacterSelect.png"/></div>
+                    <!--<div class="slide"><img src="img/robo.JPG"/></div>
                     <div class="slide"><img src="img/crono.JPG"/></div>
                     <div class="slide"><img src="img/nadia.JPG"/></div>-->
                 
