--- a/artist-name.html
+++ b/artist-name.html
@@ -55,13 +55,13 @@
         <!--backdrop-->
             <!--<img src="img/crew/damien/do-t-shirt-design-for-band.jpg"  />-->
         
-            <div class="bdslice hover"><img src="img/crew/artGallery/damien/1.jpg"/></div>
-            <div class="bdslice hover2"><img src="img/crew/artGallery/damien/2.jpg"/></div>
-            <div class="bdslice hover"><img src="img/crew/artGallery/damien/3.jpg"/></div>
-            <div class="bdslice hover2"><img src="img/crew/artGallery/damien/4.jpg"/></div>
-            <div class="bdslice hover"><img src="img/crew/artGallery/damien/5.jpg"/></div>
-            <div class="bdslice hover2"><img src="img/crew/artGallery/damien/6.jpg"/></div>
-            <div class="bdslice hover"><img src="img/crew/artGallery/damien/7.jpg"/></div>
+            <div class="bdslice "><img src="img/crew/artGallery/damien/1.jpg"/></div>
+            <div class="bdslice "><img src="img/crew/artGallery/damien/2.jpg"/></div>
+            <div class="bdslice "><img src="img/crew/artGallery/damien/3.jpg"/></div>
+            <div class="bdslice "><img src="img/crew/artGallery/damien/4.jpg"/></div>
+            <div class="bdslice "><img src="img/crew/artGallery/damien/5.jpg"/></div>
+            <div class="bdslice "><img src="img/crew/artGallery/damien/6.jpg"/></div>
+            <div class="bdslice "><img src="img/crew/artGallery/damien/7.jpg"/></div>
         
         </div>
         <div id="toptear" class="card">  <!--#fcf4df-->
