--- a/artist-name.html
+++ b/artist-name.html
@@ -28,7 +28,7 @@
     -->
     <div id="minihead" class="card ">
         <div  class="fcard ">
-            <img  id="menubar" src="img/menubar.png" onclick="toggleMenu();"/>
+            <img  id="menubar" src="img/nav1.png" onclick="toggleMenu();"/>
     <ul id="navbar3">
         <li><a href="index.html" >Home</a></li>
       <!--  <li><a href="about.html" >About</a></li> -->
