--- a/artist-name.html
+++ b/artist-name.html
@@ -31,10 +31,12 @@
             <img  id="menubar" src="img/nav1.png" onclick="toggleMenu();"/>
             <ul id="navbar3">
                 <li><a href="index.html" >Home</a></li>
-              <!--  <li><a href="about.html" >About</a></li> -->
-                <li><a href="samples.html" >Samples</a></li>
-               <!-- <li><a href="events.html" >Events</a></li> -->
+                <li><a href="about.html" >About</a></li> 
+                
+                <li><a href="events.html" >Events</a></li> 
+                <li><a href="products.html" >Products</a></li>
                 <li><a href="metalworks.html" >Metal Crafts </a></li>
+                
             </ul>
         </div>
         <div id="headlogo" class=" ">
