--- a/index.html
+++ b/index.html
@@ -85,13 +85,21 @@
             </div>
             <div id="scroll" class="hhcard">
                 
-                    <div class="slide"><img src="img/crew/heroSelect/AlCarterCharacterSelect.png"/></div>
-                    <div class="slide"><img src="img/crew/heroSelect/DamianCharacterSelect.png"/></div>
-                    <div class="slide"><img src="img/crew/heroSelect/IsuruCharacterSelect.png"/></div>
-                    <div class="slide"><img src="img/crew/heroSelect/NatiavelliCharacterSelect.png"/></div>
-                    <div class="slide"><img src="img/crew/heroSelect/VictorCharacterSelect.png"/></div>
-                    <div class="slide"><img src="img/crew/heroSelect/WendyCharacterSelect.png"/></div>
-                    <div class="slide"><img src="img/crew/heroSelect/YordenCharacterSelect.png"/></div>
+                    <div class="slide">
+                        <a href="artist-name.html"><img src="img/crew/heroSelect/AlCarterCharacterSelect.png"/></a>
+                    </div>
+                    <div class="slide">
+                        <a href="artist-name.html"><img src="img/crew/heroSelect/DamianCharacterSelect.png"/></a></div>
+                    <div class="slide">
+                        <a href="artist-name.html"><img src="img/crew/heroSelect/IsuruCharacterSelect.png"/></a></div>
+                    <div class="slide">
+                        <a href="artist-name.html"><img src="img/crew/heroSelect/NatiavelliCharacterSelect.png"/></a></div>
+                    <div class="slide">
+                        <a href="artist-name.html"><img src="img/crew/heroSelect/VictorCharacterSelect.png"/></a></div>
+                    <div class="slide">
+                        <a href="artist-name.html"><img src="img/crew/heroSelect/WendyCharacterSelect.png"/></a></div>
+                    <div class="slide">
+                        <a href="artist-name.html"><img src="img/crew/heroSelect/YordenCharacterSelect.png"/></a></div>
                     <!--<div class="slide"><img src="img/robo.JPG"/></div>
                     <div class="slide"><img src="img/crono.JPG"/></div>
                     <div class="slide"><img src="img/nadia.JPG"/></div>-->
