--- a/artist-name.html
+++ b/artist-name.html
@@ -294,7 +294,7 @@
     
     
     <div id="introscene" class="bgcb">
-    <video id="fgx" autoplay muted><source src="vdo/FireSparks.mp4" type="video/mp4"></video>
+    <video id="fgx" autoplay muted><source src="vdo/IsuruBreakchains.mp4" type="video/mp4"></video>
     </div>
     <!--
     <div id="hg" >
