--- a/index.html
+++ b/index.html
@@ -84,22 +84,37 @@
                 <h2>Art requires more than an apprentice conjurer or an aspiring sorceress, learning their craft. Team up with any of our veteran Artists and let them work their magic.</h2>
             </div>
             <div id="scroll" class="hhcard">
-                
+                <button style="left:300px;z-index:1000;" onclick="scrollClick(1), clearInterval(intvalID);">Forward</button>
+                <button style="right:300px;z-index:1000;" onclick="scrollClick(-1), clearInterval(intvalID);">Backward</button>
                     <div class="slide">
-                        <a href="artist-name.html"><img src="img/crew/heroSelect/AlCarterCharacterSelect.png"/></a>
+                       <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/AlCarterCharacterSelect.png" onended="moveto(al);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
+                       <!-- <a href="artist-name.html"><img src="img/crew/heroSelect/AlCarterCharacterSelect.png"/></a>-->
                     </div>
                     <div class="slide">
-                        <a href="artist-name.html"><img src="img/crew/heroSelect/DamianCharacterSelect.png"/></a></div>
+                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/DamianCharacterSelect.png" onended="moveto(al);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
+                        <!--<a href="artist-name.html"><img src="img/crew/heroSelect/DamianCharacterSelect.png"/></a>-->
+                </div>
                     <div class="slide">
-                        <a href="artist-name.html"><img src="img/crew/heroSelect/IsuruCharacterSelect.png"/></a></div>
+                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/IsuruCharacterSelect.png" onended="moveto(al);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
+                        <!--
+                        <a href="artist-name.html"><img src="img/crew/heroSelect/IsuruCharacterSelect.png"/></a>-->
+                    </div>
                     <div class="slide">
-                        <a href="artist-name.html"><img src="img/crew/heroSelect/NatiavelliCharacterSelect.png"/></a></div>
+                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/NatiavelliCharacterSelect.png" onended="moveto(al);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
+                        <!--<a href="artist-name.html"><img src="img/crew/heroSelect/NatiavelliCharacterSelect.png"/></a>-->
+                </div>
                     <div class="slide">
-                        <a href="artist-name.html"><img src="img/crew/heroSelect/VictorCharacterSelect.png"/></a></div>
+                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/VictorCharacterSelect.png" onended="moveto(al);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
+                        <!--<a href="artist-name.html"><img src="img/crew/heroSelect/VictorCharacterSelect.png"/></a>-->
+                </div>
                     <div class="slide">
-                        <a href="artist-name.html"><img src="img/crew/heroSelect/WendyCharacterSelect.png"/></a></div>
+                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/WendyCharacterSelect.png" onended="moveto(al);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
+                        <!--<a href="artist-name.html"><img src="img/crew/heroSelect/WendyCharacterSelect.png"/></a>-->
+                </div>
                     <div class="slide">
-                        <a href="artist-name.html"><img src="img/crew/heroSelect/YordenCharacterSelect.png"/></a></div>
+                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/YordenCharacterSelect.png" onended="moveto(al);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
+                    <!--    <a href="artist-name.html"><img src="img/crew/heroSelect/YordenCharacterSelect.png"/></a>-->
+                    </div>
                     <!--<div class="slide"><img src="img/robo.JPG"/></div>
                     <div class="slide"><img src="img/crono.JPG"/></div>
                     <div class="slide"><img src="img/nadia.JPG"/></div>-->
