--- a/index.html
+++ b/index.html
@@ -91,28 +91,28 @@
                        <!-- <a href="artist-name.html"><img src="img/crew/heroSelect/AlCarterCharacterSelect.png"/></a>-->
                     </div>
                     <div class="slide">
-                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/DamianCharacterSelect.png" onended="moveto(al);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
+                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/DamianCharacterSelect.png" onended="moveto(damian);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
                         <!--<a href="artist-name.html"><img src="img/crew/heroSelect/DamianCharacterSelect.png"/></a>-->
                 </div>
                     <div class="slide">
-                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/IsuruCharacterSelect.png" onended="moveto(al);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
+                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/IsuruCharacterSelect.png" onended="moveto(isuru);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
                         <!--
                         <a href="artist-name.html"><img src="img/crew/heroSelect/IsuruCharacterSelect.png"/></a>-->
                     </div>
                     <div class="slide">
-                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/NatiavelliCharacterSelect.png" onended="moveto(al);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
+                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/NatiavelliCharacterSelect.png" onended="moveto(natiavelli);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
                         <!--<a href="artist-name.html"><img src="img/crew/heroSelect/NatiavelliCharacterSelect.png"/></a>-->
                 </div>
                     <div class="slide">
-                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/VictorCharacterSelect.png" onended="moveto(al);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
+                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/VictorCharacterSelect.png" onended="moveto(victor);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
                         <!--<a href="artist-name.html"><img src="img/crew/heroSelect/VictorCharacterSelect.png"/></a>-->
                 </div>
                     <div class="slide">
-                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/WendyCharacterSelect.png" onended="moveto(al);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
+                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/WendyCharacterSelect.png" onended="moveto(wendy);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
                         <!--<a href="artist-name.html"><img src="img/crew/heroSelect/WendyCharacterSelect.png"/></a>-->
                 </div>
                     <div class="slide">
-                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/YordenCharacterSelect.png" onended="moveto(al);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
+                        <video onclick="play(), clearInterval(intvalID);" muted poster="img/crew/heroSelect/YordenCharacterSelect.png" onended="moveto(yorden);" ><source src="vdo/IsuruChosen.mp4" type="video/mp4"></video>
                     <!--    <a href="artist-name.html"><img src="img/crew/heroSelect/YordenCharacterSelect.png"/></a>-->
                     </div>
                     <!--<div class="slide"><img src="img/robo.JPG"/></div>
